    assignment triggered a backref of the same name
    as a bi-directional attribute on the incorrect
    class to the same target.  An informative
    error is raised now.

  - [bug] Fixed bug where incorrect type information
    would be passed when the ORM would bind the
    "version" column, when using the "version" feature.
    Tests courtesy Daniel Miller.  [ticket:2539]

- sql
  - [bug] Fixed CTE bug whereby positional
    bound parameters present in the CTEs themselves
    would corrupt the overall ordering of
    bound parameters.  This primarily
    affected SQL Server as the platform with
    positional binds + CTE support.
    [ticket:2521]

  - [bug] Fixed more un-intuitivenesses in CTEs
    which prevented referring to a CTE in a union
    of itself without it being aliased.
    CTEs now render uniquely
    on name, rendering the outermost CTE of a given
    name only - all other references are rendered
    just as the name.   This even includes other
    CTE/SELECTs that refer to different versions
    of the same CTE object, such as a SELECT
    or a UNION ALL of that SELECT. We are
    somewhat loosening the usual link between object
    identity and lexical identity in this case.
    A true name conflict between two unrelated
    CTEs now raises an error.

  - [bug] quoting is applied to the column names
    inside the WITH RECURSIVE clause of a
    common table expression according to the
    quoting rules for the originating Column.
    [ticket:2512]

  - [bug] Fixed regression introduced in 0.7.6
    whereby the FROM list of a SELECT statement
    could be incorrect in certain "clone+replace"
    scenarios.  [ticket:2518]

  - [bug] Fixed bug whereby usage of a UNION
    or similar inside of an embedded subquery
    would interfere with result-column targeting,
    in the case that a result-column had the same
    ultimate name as a name inside the embedded
    UNION. [ticket:2552]

  - [bug] Fixed a regression since 0.6 regarding